In machclk functions always emulate 1GHz counter using nanotime(9) since it has enough resolution via timecounter(9). Using machine dependent cpu_counter() is not MP safe and it won't work even on UP with Speedstep etc.

No particular comment on tech-kern, and also closes PR kern/39835.